[package]
name = "yggdrasil-keys"
version = "0.2.0"
authors = ["Jan Christian Grünhage <jan.christian@gruenhage.xyz>"]
edition = "2018"
license = "AGPL-3.0-only"
description = "Quickly generate yggdrasil keys"
homepage = "https://gitlab.com/famedly/libraries/yggdrasil-keys-rs"
documentation = "https://docs.rs/yggdrasil-keys"
repository = "https://gitlab.com/famedly/libraries/yggdrasil-keys-rs"
readme = "README.md"
keywords = ["yggdrasil", "networking", "crypto"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curve25519-dalek = "3.0.0"
ed25519-dalek = "1.0.1"
x25519-dalek = "1.1.0"
rand_core = "0.5.1"
sha2 = "0.9.2"
generic-array = "0.14.4"
hex = "0.4.2"
ipnet = "2.3.0"
thiserror = "1.0.22"

[dev-dependencies]
rand = "0.7.3"
