[package]
name = "yggdrasil-keys"
version = "0.4.0"
authors = ["Jan Christian Grünhage <jan.christian@gruenhage.xyz>"]
edition = "2018"
license = "AGPL-3.0-only"
description = "Quickly generate yggdrasil keys"
homepage = "https://github.com/jcgruenhage/yggdrasil-keys-rs"
documentation = "https://docs.rs/yggdrasil-keys"
repository = "https://github.com/jcgruenhage/yggdrasil-keys-rs"
readme = "README.md"
keywords = ["yggdrasil", "networking", "crypto"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core = "0.6"
hex = "0.4"
ipnet = "2"
thiserror = "1"

[dev-dependencies]
rand = "0.8"
criterion = "0.5"

[[bench]]
name = "key_generation"
harness = false
